--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,7 @@ edition = "2024"
 
 [dependencies]
 http = "1.4.0"
+rustls = "0.23.36"
+rustls-pemfile = "2.2.0"
 url = "2.5.8"
+webpki-roots = "1.0.6"
